Częściowy system menu
* Dodano tymczasowe elementy menu głównego (Pauzy)
* Dodano funkcję która odczytuje punkt środka ekranu (na który aktualnie patrzy się kamera)
* Dodano funkcję która łapie obiekt na który się patrzy i po upływie określonego czasu aktywuje określoną czynność

--- a/src/smiertelne_balony_unity/Assembly-CSharp.csproj
+++ b/src/smiertelne_balony_unity/Assembly-CSharp.csproj
@@ -63,6 +63,7 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\Arrow.cs" />
     <Compile Include="Assets\Scripts\ArrowManager.cs" />
+    <Compile Include="Assets\Scripts\Menu.cs" />
     <Compile Include="Assets\Scripts\MoveBallon.cs" />
     <Compile Include="Assets\Scripts\MoveCharacter.cs" />
     <Compile Include="Assets\SteamVR\Extras\SteamVR_GazeTracker.cs" />
