Edytor ścieżek i drogi 3D
- Edytor ścieżek 2D
- Edytor ścieżek 3D
- Edytor tras 2D
- Edytor tras 3D
- Konwerter Vector3 na Vector2
- Zmodyfikowany system chodzenia postaci
- Dodatkowe obiekty
- Funkcja pomocnicza wizualizacji punktów trasy/ścieżki/drogi

--- a/src/smiertelne_balony_unity/Assembly-CSharp-Editor.csproj
+++ b/src/smiertelne_balony_unity/Assembly-CSharp-Editor.csproj
@@ -63,6 +63,8 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\Paths2D\Editor\PathEditor2D.cs" />
     <Compile Include="Assets\Scripts\Paths2D\Editor\RoadEditor2D.cs" />
+    <Compile Include="Assets\Scripts\Paths3D\Editor\PathEditor3D.cs" />
+    <Compile Include="Assets\Scripts\Paths3D\Editor\RoadEditor3D.cs" />
     <Compile Include="Assets\SteamVR\Editor\SteamVR_Editor.cs" />
     <Compile Include="Assets\SteamVR\Editor\SteamVR_Preferences.cs" />
     <Compile Include="Assets\SteamVR\Editor\SteamVR_RenderModelEditor.cs" />
